# truenas-backup

./: README.md  pyproject.toml
src/truenas_backup/: cli.py
